added cppfreetype to dependencies

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 find_package(Harfbuzz )
+find_package(CppFreetype )
  
-if( Harfbuzz_FOUND )
+if( (Harfbuzz_FOUND) AND (CppFreetype_FOUND) )
                                
 include_directories(
     ${Harfbuzz_INCLUDE_DIRS}
@@ -24,7 +25,15 @@ INSTALL( TARGETS ${CMAKE_PROJECT_NAME}
 )
 
 else()
-    message( WARNING 
-        "harfbuzz was not found, disabling build of cppharfbuzz library"
-        "you may still build the doc target"  )  
+    if( NOT (Harfbuzz_FOUND) )
+        message( WARNING 
+            "harfbuzz was not found, disabling build of cppharfbuzz library"
+            "you may still build the doc target"  )  
+    endif()
+    
+    if( NOT( CppFreetype_FOUND ) )
+        message( WARNING 
+            "cppfreetype was not found, disabling build of cppharfbuzz library"
+            "you may still build the doc target"  )
+    endif()
 endif()
