Working on hb_view

--- a/test/tutorial/CMakeLists.txt
+++ b/test/tutorial/CMakeLists.txt
@@ -1,20 +1,43 @@
 find_package(Harfbuzz )
+find_package(CppFreetype)
+find_package(Freetype2)
+find_package(SigC++)
 find_package(Tclap)
+find_package(Cairomm)
  
-if( (Harfbuzz_FOUND) AND (Tclap_FOUND) )
+if( (Harfbuzz_FOUND) 
+        AND (Tclap_FOUND) 
+        AND (CppFreetype_FOUND)
+        AND (Freetype2_FOUND)
+        AND (SigC++_FOUND)
+        AND (Cairomm_FOUND) )
                                
     include_directories(
         ${Harfbuzz_INCLUDE_DIRS}
+        ${CppFreetype_INCLUDE_DIRS}
+        ${SigC++_INCLUDE_DIRS}
         ${Tclap_INCLUDE_DIR}
+        ${Cairomm_INCLUDE_DIRS}
     )
     
     add_executable( hb_view 
         main.cpp
-        CommandLine.cpp )
+        CairoOutput.cpp
+        CommandLine.cpp
+        FontReader.cpp
+        InputReader.cpp
+        Shaper.cpp
+         )
     
-    target_link_libraries( hb_view ${Harfbuzz_LIBRARIES} )
+    target_link_libraries( hb_view 
+        ${CMAKE_PROJECT_NAME}
+        ${Harfbuzz_LIBRARIES}
+        ${CppFreetype_LIBRARIES}
+        ${SigC++_LIBRARIES}
+        ${Freetype2_LIBRARIES}
+        ${Cairomm_LIBRARIES} )
                                                                     
-else()
+else() 
     set( MISSING )
     if( NOT (Harfbuzz_FOUND) )
         set( MISSING ${MISSING} " harfbuzz " )
@@ -22,6 +45,22 @@ else()
     
     if( NOT (Tclap_FOUND) )
         set( MISSING ${MISSING} " tclap " )
+    endif()
+    
+     if( NOT (CppFreetype_FOUND) )
+        set( MISSING ${MISSING} " cppfreetype " )
+    endif()
+    
+     if( NOT (Freetype2_FOUND) )
+        set( MISSING ${MISSING} " freetype2 " )
+    endif()
+    
+    if( NOT (Sig_C++FOUND) )
+        set( MISSING ${MISSING} " sigc++ " )
+    endif()
+    
+    if( NOT (Cairomm_FOUND ) )
+        set( MISSING ${MISSING} " cairomm " )
     endif()
 
     message( WARNING 
